# scada-monitor-service

./: .env  config.py  crud.py  db.py  main.py  models.py  mqtt_client.py  pyproject.toml  redis_client.py  schemas.py  websocket.py
